--- a/recipe-sharing-app/package.json
+++ b/recipe-sharing-app/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.1",
     "vite": "^7.0.6",
     "zustand": "^5.0.6"
   }
